--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-router": "^7.6.3",
+    "react-spinners": "^0.17.0",
     "sweetalert2": "^11.22.2",
     "uuid": "^13.0.0"
   },
